2006-01-11  Raja R Harinath  <rharinath@novell.com>

	Fix #77180.
	* expression.cs (Unary.Emit): When in /checked+ mode, don't emit
	unary negation of floating point types as 0-expr; negation cannot
	overflow in floating point types.

	Fix #77204.
	* expression.cs (MemberAccess.DoResolve): Disallow the use of '.'
	on operands of 'void' type.

	Fix #77200.
	* cfold.cs (BinaryFold): Implement folding of BinaryOr, BinaryAnd
	and ExclusiveOr for boolean constants too.

2006-01-09  Raja R Harinath  <rharinath@novell.com>

	Fix #75636.
	* expression.cs (Invocation.OverloadResolve): Replace reflected
	override methods with their base virtual methods, rather than
	skipping over them.
	* typemanager.cs (TypeManager.GetOverride): New.

2006-01-05  Jb Evain  <jbevain@gmail.com>

	* class.cs (Property.Define, Indexer.Define): do not tag the
	properties as SpecialName | RTSpecialName.

2006-01-04  Miguel de Icaza  <miguel@novell.com>

	* class.cs (MethodCore.IsDuplicateImplementation): This method was
	doing a low-level comparission of parameter types.  It was lacking
	a check for __argslist. 

2005-12-30  Miguel de Icaza  <miguel@novell.com>

	* expression.cs (ParameterReference.DoResolveBase): Allow
	reference parameters if they are local to this block. 

	This allows the ref and out parameters of a delegate to be used in
	an anonymous method, for example:

	delegate void set (out int x);

	set s = delegate (out int x){
		x = 0;
	};

	This is used by functionality introduced late in the C# language.
	
	* anonymous.cs (AnonymousMethod.Compatible): Allow anonymous
	method that take ref and out parameters. 

	Fixes #77119 which was a late change in the spec.

2005-12-23  Miguel de Icaza  <miguel@novell.com>

	* anonymous.cs (ScopeInfo.LinkScope): Do not link the scope to its
	parent if its the same scope.  Fixes #77060.

2005-12-21  Miguel de Icaza  <miguel@novell.com>

	* driver.cs: Report the case of no source files and no -out:
	argument provided.
