@@ -1502,7 +1502,7 @@ public class TypeManager {
 			(m is MethodBuilder || method_overrides.Contains (m));
 	}
 
-	static public MethodBase GetOverride (MethodBase m)
+	static public MethodBase TryGetBaseDefinition (MethodBase m)
 	{
 		return (MethodBase) method_overrides [m];
 	}
