@@ -12,5 +12,6 @@ test-465.cs IGNORE	# need to fix the path separator to work both on Unix and Win
 test-476.cs
 test-484.cs
 test-485.cs IGNORE
+test-486.cs
 
 gtest-230.cs
