@@ -1,3 +1,7 @@
+2006-01-12  Raja R Harinath  <rharinath@novell.com>
+
+	* test-486.cs: New test from #77221.
+
 2006-01-11  Raja R Harinath  <rharinath@novell.com>
 
 	* test-485.cs: New test from #77180.
