@@ -1,3 +1,11 @@
+2006-01-12  Raja R Harinath  <rharinath@novell.com>
+
+	Fix #77221.
+	* typemanager.cs (TryGetBaseDefinition): Rename from the mis-named
+	GetOverride.
+	* expression.cs (Invocation.OverloadResolve): Update.
+	(Invocation.DoResolve): Avoid double resolution of invocation.
+
 2006-01-11  Raja R Harinath  <rharinath@novell.com>
 
 	Fix #77180.
